--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -10,12 +10,21 @@
   <li>
     <h2><a target="_blank" rel="noopener" href="https://angular.io/tutorial">Tour of Heroes</a></h2>
   </li>
-  <li>
+  <li> 
     <h2><a target="_blank" rel="noopener" href="https://github.com/angular/angular-cli/wiki">CLI Documentation</a></h2>
   </li>
   <li>
     <h2><a target="_blank" rel="noopener" href="https://blog.angular.io/">Angular blog</a></h2>
   </li>
 </ul>
+<nav>
+  <ul>
+    <li><a href="" [routerLink]="['/dashboard']">Dashboard</a></li>
+    <li><a href="" [routerLink]="['/customer']">Customer</a></li>
+    <li><a href="" [routerLink]="['/admin']">Admin --> Users</a></li>
+    <li><a href="" [routerLink]="['/admin/emails']">Admin --> emails</a></li> 
+  </ul>
+</nav>
 
 <router-outlet></router-outlet>
+<app-lad></app-lad>
