--- a/src/app/products/product/product.component.html
+++ b/src/app/products/product/product.component.html
@@ -4,14 +4,14 @@
 <button (click)='onBack()'>Back</button>
 <div fxLayout='column' class="zero">
   
-    <div fxFlex="33" [fxFlex.md]="box1Width" class="one" ></div>
+    <div fxFlex="33" [fxFlex.md]="box1Width" class="one" >1</div>
     <div fxFlex="33" [fxLayout]="direction" fxLayout.md="row" class="two">
   
-      <div fxFlex="22"    fxFlex.md="10px" fxHide.lg                       class="two_one"></div>
-      <div fxFlex="205px" fxFlex.md="65"                                    class="two_two"></div>
-      <div fxFlex="30px"  fxFlex.md="25"   fxShow [fxHide.md]="hideBox"   class="two_three"></div>
+      <div fxFlex="22"    fxFlex.md="10px" fxHide.lg                       class="two_one">2</div>
+      <div fxFlex="205px" fxFlex.md="65"                                    class="two_two">3</div>
+      <div fxFlex="30px"  fxFlex.md="25"   fxShow [fxHide.md]="hideBox"   class="two_three">4</div>
   
     </div>
-    <div fxFlex class="three"></div>
+    <div fxFlex class="three">5</div>
   
   </div>
